<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".CreateProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/qualification"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etQualification"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:autofillHints="Qualification eg. BCAD"
            android:hint="@string/enter_qualification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_number"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etStudentNumber"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/enter_student_number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qualification_year"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etQualificationYear"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/enter_qualification_year"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/campus_name"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etCampusName"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:hint="@string/enter_campus_name" />

        <Button
            android:id="@+id/btnCreateMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_my_profile"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>